[metadata]
name = tpDcc-dccs-unreal
description = Unreal implementation for tpDcc. Utils functions to work with Unreal Python API.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpDcc/tpDcc-dccs-unreal

[options]
zip_safe = False
include_package_data = true
packages=find:
install_requires =
    euclid
    tpDcc-core
    tpDcc-libs-python
    tpDcc-libs-qt

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = tpDcc/dccs/unreal/_version.py
versionfile_build =
tag_prefix =
parentdir_prefix =